--- a/requirements.txt
+++ b/requirements.txt
@@ -41,7 +41,7 @@ google-auth-oauthlib==1.2.0
 googleapis-common-protos==1.62.0
 gunicorn==21.2.0
 h11==0.14.0
-hatchling @ file:///private/tmp/python-hatchling-20231226-5042-j6ku33/hatchling-1.21.0
+# hatchling @ file:///private/tmp/python-hatchling-20231226-5042-j6ku33/hatchling-1.21.0
 httplib2==0.22.0
 idna==3.6
 ipython==8.14.0
