--- a/requirements.txt
+++ b/requirements.txt
@@ -1,107 +1,3 @@
-alembic==1.13.0
-aniso8601==9.0.1
-anyio==3.7.0
-appnope==0.1.3
-# argcomplete @ file:///private/tmp/python-argcomplete-20231211-41899-s7v75l/argcomplete-3.2.1
-asgiref==3.7.2
-asttokens==2.2.1
-backcall==0.2.0
-bidict==0.23.1
-blinker==1.7.0
-boto3==1.33.11
-botocore==1.33.11
-cachetools==5.3.2
-certifi==2023.11.17
-# cffi @ file:///private/tmp/cffi-20231211-40040-va2lvh/cffi-1.16.0
-charset-normalizer==3.3.2
-click==8.1.7
-colorlog==6.7.0
-# cryptography @ file:///private/tmp/python-cryptography-20231127-5983-mtb0t9/cryptography-41.0.7
-decorator==5.1.1
-distlib==0.3.7
-ecdsa==0.18.0
-# editables @ file:///private/tmp/python-hatchling--editables-20231226-5042-9qrz2a/editables-0.5
-executing==1.2.0
-fastjsonschema==2.17.1
-filelock==3.13.1
-Flask==3.0.0
-Flask-Admin==1.6.1
-Flask-Cors==4.0.0
-Flask-JWT-Extended==4.6.0
-Flask-Migrate==4.0.5
-Flask-RESTful==0.3.10
+flask==3.0.0
+flask-cors==4.0.0
 flask-sock==0.7.0
-Flask-SocketIO==5.5.1
-Flask-SQLAlchemy==3.1.1
-google-api-core==2.17.1
-google-api-python-client==2.119.0
-google-auth==2.28.1
-google-auth-httplib2==0.2.0
-google-auth-oauthlib==1.2.0
-googleapis-common-protos==1.62.0
-gunicorn==21.2.0
-h11==0.14.0
-# hatchling @ file:///private/tmp/python-hatchling-20231226-5042-j6ku33/hatchling-1.21.0
-httplib2==0.22.0
-idna==3.6
-ipython==8.14.0
-itsdangerous==2.1.2
-jedi==0.18.2
-Jinja2==3.1.2
-jmespath==1.0.1
-jsonpatch==1.32
-jsonpointer==2.3
-lxml==4.9.2
-Mako==1.3.0
-MarkupSafe==2.1.3
-marshmallow==3.20.1
-marshmallow-sqlalchemy==1.3.0
-matplotlib-inline==0.1.6
-mypy-extensions==1.0.0
-oauthlib==3.2.2
-packaging==23.2
-parso==0.8.3
-# pathspec @ file:///private/tmp/python-pathspec-20231212-4674-kki6wg/pathspec-0.12.1
-pexpect==4.8.0
-pickleshare==0.7.5
-pipenv==2023.11.15
-platformdirs==3.11.0
-# pluggy @ file:///private/tmp/python-pluggy-20231119-4749-5bc38g/pluggy-1.3.0
-prompt-toolkit==3.0.38
-protobuf==4.25.3
-psycopg2-binary==2.9.9
-ptyprocess==0.7.0
-pure-eval==0.2.2
-pyasn1==0.5.1
-pyasn1-modules==0.3.0
-# pycparser @ file:///private/tmp/pycparser-20231211-24854-j7ycwo/pycparser-2.21
-Pygments==2.15.1
-PyJWT==2.8.0
-pyparsing==3.1.1
-# python-dateutil @ file:///private/tmp/python-dateutil-20231119-4809-10tr8ez/python-dateutil-2.8.2
-python-dotenv==1.0.0
-python-engineio==4.11.2
-python-jose==3.3.0
-python-socketio==5.12.1
-pytz==2023.3.post1
-# PyYAML @ file:///private/tmp/pyyaml-20231018-5457-utbrds/PyYAML-6.0.1
-reactpy==1.0.0
-requests==2.31.0
-requests-oauthlib==1.3.1
-rsa==4.9
-s3transfer==0.8.2
-simple-websocket==1.1.0
-six==1.16.0
-sniffio==1.3.0
-SQLAlchemy==2.0.23
-stack-data==0.6.2
-traitlets==5.9.0
-# trove-classifiers @ file:///private/tmp/python-trove-classifiers-20240108-4532-17ylhs/trove-classifiers-2024.1.8
-typing_extensions==4.8.0
-uritemplate==4.1.1
-urllib3==2.0.7
-virtualenv==20.24.6
-wcwidth==0.2.6
-Werkzeug==3.0.1
-wsproto==1.2.0
-WTForms==3.2.1
